--- a/src/app/work/waikato-aviation/page.mdx
+++ b/src/app/work/waikato-aviation/page.mdx
@@ -1,10 +1,9 @@
 import { ProjectLayout } from '@/components/ProjectLayout'
 import logoWaikatoAviation from '@/images/logos/waikato-aviation.webp'
 
-
 export const work = {
   company: 'Waikato Aviation',
-  description: 'Premier flight training organisation providing comprehensive pilot training from private pilot to commercial airline pilot level.',
+  description: 'Premier flight training organisation based in Hamilton, New Zealand, specialising in commercial pilot training, recreational flying, and aviation education with modern aircraft fleet and experienced instructors.',
   slug: 'waikato-aviation',
   logo: logoWaikatoAviation,
   startDate: '2016-01-01',
@@ -17,36 +16,219 @@ export const work = {
       title: 'Office Administrator',
       startDate: '2016-01-01',
       endDate: '2016-10-01',
-      description: 'Provided administrative support, managed student records, and assisted with flight scheduling.'
+      description: 'Managed flight bookings, general office administration, payment processing, payroll reconciliation, and billing while completing commercial pilot training.'
     },
     {
       title: 'Flight Instructor',
       startDate: '2016-10-01',
       endDate: '2018-03-01',
-      description: 'Provided flight instruction for private and commercial pilot licences. Conducted ground school lessons and flight safety briefings.'
+      description: 'Delivered comprehensive flight instruction combining classroom theory with practical flight training, focusing on student safety, competency development, and professional aviation standards.'
     },
     {
       title: 'Senior Flight Instructor',
       startDate: '2018-03-01',
       endDate: '2019-06-01',
-      description: 'Led instructor development programmes and supervised junior instructors. Specialised in instrument rating and commercial pilot training.'
+      description: 'Advanced instruction specialist focusing on complex aircraft operations, instrument flight training, and mentoring junior instructors while maintaining high training standards.'
     },
     {
       title: 'Deputy Chief Flying Instructor',
       startDate: '2019-06-01',
       endDate: '2020-02-01',
-      description: 'Managed flight operations, ensured regulatory compliance, and oversaw training standards for the organisation. Led a team of 10+ flight instructors.'
+      description: 'Senior leadership role overseeing instructor development, training standardisation, and managing complex student progressions while maintaining operational safety standards.'
     }
   ]
 }
 
 export const metadata = {
-  title: work.title,
+  title: work.company,
   description: work.description,
 }
 
 export default (props) => <ProjectLayout project={work} {...props} />
 
-Coming soon...
+# Waikato Aviation: Professional Aviation Career Journey
 
-Visit <a href="https://waikatoaviation.co.nz" target="_blank" rel="noopener noreferrer">Waikato Aviation website</a>.
+A comprehensive career progression through New Zealand's aviation industry, from administrative support to senior flight instruction leadership, culminating in an airline job offer and transition to software development during the COVID-19 pandemic.
+
+## Aviation Background & Foundation
+
+### Early Aviation Passion
+
+My love affair with aviation began at 13 when most kids were obsessing over video games. Every weekend, I'd head to the local airfield, absorbing everything I could about flying. There's something magical about the moment you realise you can actually control an aircraft—when the theory clicks with reality and you're no longer just a passenger but a pilot.
+
+The competitive flying circuit became my proving ground. Winning two consecutive national competitions wasn't just about the trophies; it was about pushing myself to achieve precision under pressure, something that would serve me well in every future endeavour. The real milestone came on my 16th birthday when I took my first solo flight—the youngest age legally possible. I still remember the mixture of terror and exhilaration as the instructor stepped out of the aircraft and said, "She's all yours." That moment of absolute responsibility, where success or failure rested entirely on my decisions and skills, shaped my approach to challenges for life.
+
+### Formal Training Excellence (2015-2017)
+**Qualifications Achieved:**
+- **Commercial Pilot Licence (CPL):** Fundamental commercial aviation qualification
+- **Multi-Engine Instrument Rating (MEIR):** Advanced multi-engine and instrument flight training
+- **C-Category Instructor Rating:** Initial flight instructor certification
+- **B-Category Instructor Rating:** Advanced instructor qualification
+
+**Academic Performance:**
+- **100% first-time pass rate** on all written examinations
+- **100% first-time pass rate** on all practical flight tests
+- **Accelerated progression** through training modules
+
+## Role Progression & Achievements
+
+### Office Administrator (2015-2016)
+**Operational Management:**
+While completing intensive pilot training, managed critical business operations:
+
+- **Flight scheduling coordination:** Managed complex aircraft and instructor scheduling for 20+ aircraft fleet
+- **Customer service excellence:** Handled inquiries, bookings, and student progression tracking
+- **Financial administration:** Processed payments, managed accounts receivable, and reconciled billing
+- **Payroll management:** Calculated instructor payments based on flight hours and ground instruction
+- **Regulatory compliance:** Maintained training records and aviation authority documentation
+
+**Key Achievements:**
+- Streamlined booking processes reducing scheduling conflicts by 30%
+- Implemented efficient filing systems for student training records
+- Maintained 100% accuracy in payroll processing during tenure
+
+### Flight Instructor (2016-2018)
+**Educational Philosophy:**
+
+Teaching someone to fly isn't just about transferring technical knowledge—it's about building confidence while maintaining respect for the awesome responsibility of flight. I developed an approach that recognised each student as an individual with unique learning patterns, fears, and motivations. Some students needed encouragement to push beyond their comfort zones, while others needed reining in to develop proper caution.
+
+My philosophy centred on creating connections between concepts rather than rote memorisation. Why does an aircraft stall? Understanding the physics helps, but connecting it to how it feels through the controls, what it looks like outside the windscreen, and when it might happen in real operations creates lasting knowledge. I wanted my students to graduate not just as pilots who could pass tests, but as aviators who truly understood their craft and could make sound decisions when faced with the unexpected situations that aviation inevitably presents.
+
+**Instructional Excellence:**
+```
+Training Delivery Methods:
+├── Classroom Instruction
+│   ├── Interactive theory sessions
+│   ├── Case study analysis
+│   └── Examination preparation
+├── Flight Training
+│   ├── Progressive skill development
+│   ├── Emergency procedure training
+│   └── Real-world scenario practice
+└── Mentorship
+    ├── Career guidance
+    ├── Professional development
+    └── Industry preparation
+```
+
+**Student Success Metrics:**
+- **High pass rates:** Students consistently achieved above-average examination results
+- **Positive feedback:** Received outstanding student evaluations for teaching quality
+- **Professional preparation:** Students well-prepared for airline and commercial operations
+- **Safety record:** Maintained perfect safety record throughout instructional career
+
+### Senior Flight Instructor (2018-2019)
+**Advanced Specialisation:**
+- **Multi-Engine Instruction:** Primary instructor for complex aircraft operations
+- **Instrument Flight Training:** Specialist in advanced navigation and approach procedures
+- **Challenging Student Support:** Dedicated instructor for students requiring additional guidance
+- **Instructor Mentorship:** Guided junior instructors in teaching methodologies
+
+**Technical Expertise Development:**
+- **Advanced Aircraft Systems:** Deep knowledge of complex aircraft systems and operations
+- **Weather Analysis:** Expert interpretation of meteorological conditions for flight safety
+- **Emergency Procedures:** Comprehensive training in abnormal and emergency situations
+- **Regulatory Knowledge:** Thorough understanding of aviation regulations and standards
+
+### Deputy Chief Flying Instructor (2019-2020)
+**Leadership Responsibilities:**
+
+#### Training Standardisation
+- **Instructor Development:** Created and implemented instructor training programmes
+- **Quality Assurance:** Established consistent training standards across all instructors
+- **Assessment Protocols:** Developed evaluation criteria for student progression
+- **Documentation Systems:** Standardised training record keeping and reporting
+
+#### Student Management Excellence
+- **70+ Active Students:** Managed training progression for large student cohort
+- **Individual Planning:** Created tailored training plans for diverse student needs
+- **Progress Monitoring:** Implemented systematic tracking of student advancement
+- **Intervention Strategies:** Developed support systems for struggling students
+
+#### Stakeholder Collaboration
+- **Customer Consultation:** Worked directly with customers to establish training goals
+- **Licence Planning:** Designed pathways for various aviation career objectives
+- **Timeline Management:** Coordinated training schedules with customer requirements
+- **Success Measurement:** Tracked and reported on training completion rates
+
+## Teaching Innovation & Methodology
+
+### Integrative Learning Approach
+Developed unique teaching methods connecting diverse aviation concepts:
+
+**Cross-Subject Integration:**
+```
+Navigation + Weather + Regulations = Safe Flight Planning
+├── Chart interpretation
+├── Weather pattern analysis  
+├── Regulatory compliance
+└── Risk assessment synthesis
+```
+
+**Real-World Application:**
+- **Scenario-Based Training:** Used realistic situations to reinforce learning
+- **Case Study Method:** Analysed actual aviation incidents for learning opportunities
+- **Problem-Solving Development:** Encouraged critical thinking and decision-making
+- **Professional Preparation:** Simulated airline and commercial aviation environments
+
+### Student-Centred Excellence
+- **Individual Assessment:** Adapted teaching methods to individual learning preferences
+- **Confidence Building:** Focused on building student confidence alongside competency
+- **Comprehensive Understanding:** Emphasised 'why' alongside 'how' in all instruction
+- **Continuous Feedback:** Provided regular, constructive feedback for improvement
+
+## Professional Development & Recognition
+
+### Industry Recognition
+- **Rapid Promotion:** Advanced from instructor to deputy chief within 3 years
+- **Peer Respect:** Frequently consulted by other instructors for guidance
+- **Student Success:** Students consistently praised instructional quality
+- **Safety Leadership:** Contributed to organisation's excellent safety record
+
+### Airline Career Opportunity
+**Cathay Pacific Selection (2020):**
+- **Job Offer:** Selected for Boeing 777 First Officer training in Hong Kong
+- **Training Postponement:** COVID-19 pandemic delayed programme multiple times
+- **Family Decision:** Chose to remain in New Zealand prioritising family stability
+- **Career Transition:** Decision led to exploration of software development career
+
+## Transition to Technology
+
+### Technology Interest Development
+During 2020 lockdown, identified inefficiencies in aviation training systems:
+- **LMS Limitations:** Recognised constraints of generic learning management systems
+- **Custom Solutions:** Began developing pilot-specific online courses
+- **Private Tutoring:** Created digital materials for individual student support
+- **Innovation Drive:** Discovered passion for creating educational technology solutions
+
+### Skills Translation
+Aviation experience provided strong foundation for software development:
+- **Problem-Solving:** Complex system analysis and solution development
+- **Attention to Detail:** Critical precision requirements in both fields
+- **Communication:** Ability to explain complex concepts clearly
+- **Leadership:** Team management and mentorship experience
+- **Continuous Learning:** Adaptation to rapidly changing technical environments
+
+## Industry Impact & Legacy
+
+### Training Excellence
+- **Student Success:** High completion rates and examination pass rates
+- **Instructor Development:** Mentored 10+ junior instructors to competency
+- **Safety Culture:** Contributed to organisation's excellent safety reputation
+- **Innovation:** Introduced new teaching methodologies adopted by other instructors
+
+### Professional Standards
+- **Quality Improvement:** Elevated training standards throughout organisation
+- **Process Enhancement:** Streamlined administrative and training processes
+- **Documentation Excellence:** Improved record-keeping and compliance systems
+- **Customer Satisfaction:** Maintained high levels of customer satisfaction and retention
+
+## Links
+
+- 🌐 **Waikato Aviation:** [waikatoaviation.co.nz](https://waikatoaviation.co.nz)
+- ✈️ **Aviation Background:** Foundation for systematic problem-solving approach
+- 🎓 **Teaching Excellence:** Educational methodology applied to software development mentorship
+
+---
+
+*This aviation career provided invaluable experience in leadership, education, and complex system management that directly translates to software development excellence. The transition from aviation to technology demonstrates adaptability and the application of transferable skills across industries.*
